subindo cobertura e alguns testes