@@ -1,8 +1,8 @@
 package com.meli.projetoFinal.service;
 
+import com.meli.projetoFinal.dto.*;
 import com.meli.projetoFinal.exception.ConflitoDeDadosException;
 import com.meli.projetoFinal.exception.DadoNaoEncontradoException;
-import com.meli.projetoFinal.dto.PartidasDTO;
 import com.meli.projetoFinal.model.Clube;
 import com.meli.projetoFinal.model.Estadio;
 import com.meli.projetoFinal.model.Partidas;
@@ -21,7 +21,9 @@ import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 
+import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -204,9 +206,9 @@ class PartidasServiceTest {
     }
 
     @Test
-    void  buscarPartidas(){
+    void buscarPartidas() {
         Pageable pageable = PageRequest.of(0, 10);
-        Page<Partidas> page = new PageImpl<>(Arrays.asList(new Partidas()));
+        Page<Partidas> page = new PageImpl<>(List.of(new Partidas()));
         when(partidasRepository.findAll(pageable)).thenReturn(page);
     }
 
@@ -246,7 +248,7 @@ class PartidasServiceTest {
     @Test
     void getPartidas_RetornaPaginaVaziaQuandoNaoHaPartidas() {
         Pageable pageable = PageRequest.of(0, 10);
-        Page<Partidas> page = new PageImpl<>(Arrays.asList());
+        Page<Partidas> page = new PageImpl<>(List.of());
         when(partidasRepository.findAll(pageable)).thenReturn(page);
 
         Page<Partidas> resultado = partidasService.getPartidas(pageable);
@@ -303,7 +305,7 @@ class PartidasServiceTest {
 
 
         Assertions.assertThrows(ConflitoDeDadosException.class, () -> {
-            partidasService.atualizarPartida(id,dto);
+            partidasService.atualizarPartida(id, dto);
         });
 
     }
@@ -329,7 +331,7 @@ class PartidasServiceTest {
 
 
         Assertions.assertThrows(ConflitoDeDadosException.class, () -> {
-            partidasService.atualizarPartida(id,dto);
+            partidasService.atualizarPartida(id, dto);
         });
 
     }
@@ -450,6 +452,329 @@ class PartidasServiceTest {
 
         Assertions.assertThrows(ConflitoDeDadosException.class, () -> {
             partidasService.atualizarPartida(id, dto);
+        });
+    }
+
+    @Test
+    void getRetrospectoClubeRetornaRetrospectoCorreto() {
+        Long clubeId = 1L;
+        Clube clube = new Clube();
+        clube.setId(clubeId);
+        clube.setNome("Clube A");
+
+        Clube clubeVisitante1 = new Clube();
+        clubeVisitante1.setId(2L);
+
+        Clube clubeVisitante2 = new Clube();
+        clubeVisitante2.setId(3L);
+
+        Estadio estadio = new Estadio();
+        estadio.setNome("Estadio A");
+        estadio.setId(1L);
+
+        Partidas partida1 = new Partidas();
+        partida1.setClubeCasa(clube);
+        partida1.setClubeVisitante(clubeVisitante1);
+        partida1.setGolsCasa(2);
+        partida1.setGolsVisitante(1);
+        partida1.setEstadio(estadio);
+        partida1.setDataPartida(LocalDate.now().minusDays(7));
+
+        Partidas partida2 = new Partidas();
+        partida2.setClubeCasa(clubeVisitante2);
+        partida2.setClubeVisitante(clube);
+        partida2.setGolsCasa(1);
+        partida2.setGolsVisitante(1);
+        partida2.setEstadio(estadio);
+        partida2.setDataPartida(LocalDate.now().minusDays(1));
+
+        when(clubeRepository.findById(clubeId)).thenReturn(Optional.of(clube));
+        when(partidasRepository.findAll()).thenReturn(Arrays.asList(partida1, partida2));
+
+        RetrospectoClubeDTO resultado = partidasService.getRetrospectoClube(clubeId);
+
+        Assertions.assertNotNull(resultado);
+        Assertions.assertEquals(1, resultado.getVitorias());
+        Assertions.assertEquals(1, resultado.getEmpates());
+        Assertions.assertEquals(0, resultado.getDerrotas());
+        Assertions.assertEquals(3, resultado.getGolsFeitos());
+        Assertions.assertEquals(2, resultado.getGolsSofridos());
+    }
+
+    @Test
+    void getRetrospectoClubeClubeNaoEncontrado() {
+        Long clubeId = 1L;
+        when(clubeRepository.findById(clubeId)).thenReturn(Optional.empty());
+
+        Assertions.assertThrows(DadoNaoEncontradoException.class, () -> {
+            partidasService.getRetrospectoClube(clubeId);
+        });
+    }
+
+    @Test
+    void getRetrospectoContraAdversariosRetornaRetrospectoCorreto() {
+        Long clubeId = 1L;
+        Clube clube = new Clube();
+        clube.setId(clubeId);
+        clube.setNome("Clube A");
+
+        Clube adversario = new Clube();
+        adversario.setId(2L);
+        adversario.setNome("Clube B");
+
+        Estadio estadio = new Estadio();
+        estadio.setNome("Estadio A");
+        estadio.setId(1L);
+
+
+        Partidas partida = new Partidas();
+        partida.setClubeCasa(clube);
+        partida.setClubeVisitante(adversario);
+        partida.setGolsCasa(3);
+        partida.setGolsVisitante(2);
+        partida.setEstadio(estadio);
+        partida.setDataPartida(LocalDate.now());
+
+        when(clubeRepository.existsById(clubeId)).thenReturn(true);
+        when(partidasRepository.findAll()).thenReturn(List.of(partida));
+
+        List<RetrospectoAdversarioDTO> resultado = partidasService.getRetrospectoContraAdversarios(clubeId);
+
+        Assertions.assertNotNull(resultado);
+        Assertions.assertEquals(1, resultado.size());
+        RetrospectoAdversarioDTO dto = resultado.getFirst();
+        Assertions.assertEquals(adversario.getId(), dto.getAdversarioId());
+        Assertions.assertEquals(3, dto.getGolsFeitos());
+        Assertions.assertEquals(2, dto.getGolsSofridos());
+        Assertions.assertEquals(1, dto.getVitorias());
+        Assertions.assertEquals(0, dto.getEmpates());
+        Assertions.assertEquals(0, dto.getDerrotas());
+    }
+
+    @Test
+    void getRetrospectoContraAdversariosClubeNaoEncontrado() {
+        Long clubeId = 1L;
+        when(clubeRepository.existsById(clubeId)).thenReturn(false);
+
+        Assertions.assertThrows(DadoNaoEncontradoException.class, () -> {
+            partidasService.getRetrospectoContraAdversarios(clubeId);
+        });
+    }
+
+    @Test
+    void getRetrospectoConfrontoRetornaRetrospectoCorreto() {
+        Long clubeAId = 1L;
+        Long clubeBId = 2L;
+
+        Clube clubeA = new Clube();
+        clubeA.setId(clubeAId);
+        clubeA.setNome("Clube A");
+
+        Clube clubeB = new Clube();
+        clubeB.setId(clubeBId);
+        clubeB.setNome("Clube B");
+
+        Estadio estadio = new Estadio();
+        estadio.setNome("Estadio A");
+        estadio.setId(1L);
+
+        Partidas partida = new Partidas();
+        partida.setClubeCasa(clubeA);
+        partida.setClubeVisitante(clubeB);
+        partida.setGolsCasa(2);
+        partida.setGolsVisitante(1);
+        partida.setEstadio(estadio);
+        partida.setDataPartida(LocalDate.now());
+
+        when(clubeRepository.findById(clubeAId)).thenReturn(Optional.of(clubeA));
+        when(clubeRepository.findById(clubeBId)).thenReturn(Optional.of(clubeB));
+        when(partidasRepository.findAll()).thenReturn(List.of(partida));
+
+        ConfrontoDiretoDTO resultado = partidasService.getRetrospectoConfronto(clubeAId, clubeBId);
+
+        Assertions.assertNotNull(resultado);
+        Assertions.assertEquals(1, resultado.getTime1().getVitorias());
+        Assertions.assertEquals(0, resultado.getTime1().getEmpates());
+        Assertions.assertEquals(0, resultado.getTime1().getDerrotas());
+        Assertions.assertEquals(2, resultado.getTime1().getGolsFeitos());
+        Assertions.assertEquals(1, resultado.getTime1().getGolsSofridos());
+    }
+
+    @Test
+    void getRetrospectoConfrontoClubeNaoEncontrado() {
+        Long clubeAId = 1L;
+        Long clubeBId = 2L;
+
+        when(clubeRepository.findById(clubeAId)).thenReturn(Optional.empty());
+
+        Assertions.assertThrows(DadoNaoEncontradoException.class, () -> {
+            partidasService.getRetrospectoConfronto(clubeAId, clubeBId);
+        });
+    }
+
+
+
+    @Test
+    void getRetrospectoConfrontoRetornaEmpateParaAmbosOsClubes() {
+        Long clubeAId = 1L;
+        Long clubeBId = 2L;
+
+        Clube clubeA = new Clube();
+        clubeA.setId(clubeAId);
+        clubeA.setNome("Clube A");
+
+        Clube clubeB = new Clube();
+        clubeB.setId(clubeBId);
+        clubeB.setNome("Clube B");
+
+        Estadio estadio = new Estadio();
+        estadio.setId(1L);
+        estadio.setNome("Estadio");
+
+        Partidas partida = new Partidas();
+        partida.setClubeCasa(clubeA);
+        partida.setClubeVisitante(clubeB);
+        partida.setGolsCasa(2);
+        partida.setGolsVisitante(2);
+        partida.setEstadio(estadio);
+        partida.setDataPartida(LocalDate.now());
+
+        when(clubeRepository.findById(clubeAId)).thenReturn(Optional.of(clubeA));
+        when(clubeRepository.findById(clubeBId)).thenReturn(Optional.of(clubeB));
+        when(partidasRepository.findAll()).thenReturn(List.of(partida));
+
+        ConfrontoDiretoDTO resultado = partidasService.getRetrospectoConfronto(clubeAId, clubeBId);
+
+        Assertions.assertEquals(1, resultado.getTime1().getEmpates());
+        Assertions.assertEquals(1, resultado.getTime2().getEmpates());
+        Assertions.assertEquals(0, resultado.getTime1().getVitorias());
+        Assertions.assertEquals(0, resultado.getTime2().getVitorias());
+    }
+
+    @Test
+    void getRetrospectoConfrontoClubeBTemVitoria() {
+        Long clubeAId = 1L;
+        Long clubeBId = 2L;
+
+        Clube clubeA = new Clube();
+        clubeA.setId(clubeAId);
+        clubeA.setNome("Clube A");
+
+        Clube clubeB = new Clube();
+        clubeB.setId(clubeBId);
+        clubeB.setNome("Clube B");
+
+        Estadio estadio = new Estadio();
+        estadio.setId(1L);
+        estadio.setNome("Estadio");
+
+        Partidas partida = new Partidas();
+        partida.setClubeCasa(clubeA);
+        partida.setClubeVisitante(clubeB);
+        partida.setGolsCasa(1);
+        partida.setGolsVisitante(3);
+        partida.setEstadio(estadio);
+        partida.setDataPartida(LocalDate.now());
+
+        when(clubeRepository.findById(clubeAId)).thenReturn(Optional.of(clubeA));
+        when(clubeRepository.findById(clubeBId)).thenReturn(Optional.of(clubeB));
+        when(partidasRepository.findAll()).thenReturn(List.of(partida));
+
+        ConfrontoDiretoDTO resultado = partidasService.getRetrospectoConfronto(clubeAId, clubeBId);
+
+        Assertions.assertEquals(1, resultado.getTime2().getVitorias());
+        Assertions.assertEquals(1, resultado.getTime1().getDerrotas());
+        Assertions.assertEquals(0, resultado.getTime1().getVitorias());
+        Assertions.assertEquals(0, resultado.getTime2().getDerrotas());
+    }
+    @Test
+    void getRankingRetornaRankingPorVitorias() {
+        Clube clube1 = new Clube();
+        clube1.setId(1L);
+        clube1.setNome("Clube 1");
+        Clube clube2 = new Clube();
+        clube2.setId(2L);
+        clube2.setNome("Clube 2");
+
+        Partidas partida = new Partidas();
+        partida.setClubeCasa(clube1);
+        partida.setClubeVisitante(clube2);
+        partida.setGolsCasa(2);
+        partida.setGolsVisitante(1);
+
+        when(partidasRepository.findAll()).thenReturn(List.of(partida));
+
+        List<RankingDTO> ranking = partidasService.getRanking("vitorias");
+
+        Assertions.assertEquals(1, ranking.size());
+        Assertions.assertEquals(clube1.getNome(), ranking.getFirst().getClubeNome());
+        Assertions.assertEquals(1, ranking.getFirst().getVitorias());
+    }
+
+    @Test
+    void getRankingRetornaRankingPorJogos() {
+        Clube clube1 = new Clube();
+        clube1.setId(1L);
+        clube1.setNome("Clube 1");
+        Clube clube2 = new Clube();
+        clube2.setId(2L);
+        clube2.setNome("Clube 2");
+
+        Partidas partida = new Partidas();
+        partida.setClubeCasa(clube1);
+        partida.setClubeVisitante(clube2);
+        partida.setGolsCasa(0);
+        partida.setGolsVisitante(0);
+
+        when(partidasRepository.findAll()).thenReturn(List.of(partida));
+
+        List<RankingDTO> ranking = partidasService.getRanking("jogos");
+
+        Assertions.assertEquals(2, ranking.size());
+        Assertions.assertTrue(ranking.stream().allMatch(r -> r.getJogos() == 1));
+    }
+
+    @Test
+    void getRankingLancaExcecaoParaCriterioInvalido() {
+        Clube clube1 = new Clube();
+        clube1.setId(1L);
+        clube1.setNome("Clube 1");
+        Clube clube2 = new Clube();
+        clube2.setId(2L);
+        clube2.setNome("Clube 2");
+
+        Partidas partida = new Partidas();
+        partida.setClubeCasa(clube1);
+        partida.setClubeVisitante(clube2);
+        partida.setGolsCasa(1);
+        partida.setGolsVisitante(1);
+
+        when(partidasRepository.findAll()).thenReturn(List.of(partida));
+
+        Assertions.assertThrows(IllegalArgumentException.class, () -> {
+            partidasService.getRanking("qualquercoisa");
+        });
+    }
+
+    @Test
+    void getRankingLancaExcecaoQuandoRankingVazio() {
+        Clube clube1 = new Clube();
+        clube1.setId(1L);
+        clube1.setNome("Clube 1");
+        Clube clube2 = new Clube();
+        clube2.setId(2L);
+        clube2.setNome("Clube 2");
+
+        Partidas partida = new Partidas();
+        partida.setClubeCasa(clube1);
+        partida.setClubeVisitante(clube2);
+        partida.setGolsCasa(0);
+        partida.setGolsVisitante(0);
+
+        when(partidasRepository.findAll()).thenReturn(List.of(partida));
+
+        Assertions.assertThrows(DadoNaoEncontradoException.class, () -> {
+            partidasService.getRanking("gols");
         });
     }
 }
